--- a/package.json
+++ b/package.json
@@ -1,86 +1,72 @@
 {
-  "devDependencies": {
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.11.9",
-    "express": "^4.18.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
-  },
   "name": "breaktime-backend",
+  "version": "0.0.1",
   "description": "",
-  "version": "1.0.0",
-  "main": "index.js",
-  "dependencies": {
-    "accepts": "^1.3.8",
-    "array-flatten": "^1.1.1",
-    "body-parser": "^1.20.1",
-    "bytes": "^3.1.2",
-    "call-bind": "^1.0.2",
-    "content-disposition": "^0.5.4",
-    "content-type": "^1.0.4",
-    "cookie": "^0.5.0",
-    "cookie-signature": "^1.0.6",
-    "debug": "^2.6.9",
-    "depd": "^2.0.0",
-    "destroy": "^1.2.0",
-    "ee-first": "^1.1.1",
-    "encodeurl": "^1.0.2",
-    "escape-html": "^1.0.3",
-    "etag": "^1.8.1",
-    "finalhandler": "^1.2.0",
-    "forwarded": "^0.2.0",
-    "fresh": "^0.5.2",
-    "function-bind": "^1.1.1",
-    "get-intrinsic": "^1.1.3",
-    "has": "^1.0.3",
-    "has-symbols": "^1.0.3",
-    "http-errors": "^2.0.0",
-    "iconv-lite": "^0.4.24",
-    "inherits": "^2.0.4",
-    "ipaddr.js": "^1.9.1",
-    "media-typer": "^0.3.0",
-    "merge-descriptors": "^1.0.1",
-    "methods": "^1.1.2",
-    "mime": "^1.6.0",
-    "mime-db": "^1.52.0",
-    "mime-types": "^2.1.35",
-    "ms": "^2.0.0",
-    "negotiator": "^0.6.3",
-    "object-inspect": "^1.12.2",
-    "on-finished": "^2.4.1",
-    "parseurl": "^1.3.3",
-    "path-to-regexp": "^0.1.7",
-    "proxy-addr": "^2.0.7",
-    "qs": "^6.11.0",
-    "range-parser": "^1.2.1",
-    "raw-body": "^2.5.1",
-    "safe-buffer": "^5.2.1",
-    "safer-buffer": "^2.1.2",
-    "send": "^0.18.0",
-    "serve-static": "^1.15.0",
-    "setprototypeof": "^1.2.0",
-    "side-channel": "^1.0.4",
-    "statuses": "^2.0.1",
-    "toidentifier": "^1.0.1",
-    "type-is": "^1.6.18",
-    "unpipe": "^1.0.0",
-    "utils-merge": "^1.0.1",
-    "vary": "^1.1.2"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "start": " node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Code-4-Community/breaktime-backend.git"
-  },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Code-4-Community/breaktime-backend/issues"
+  "private": true,
+  "license": "UNLICENSED",
+  "scripts": {
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
-  "homepage": "https://github.com/Code-4-Community/breaktime-backend#readme"
+  "dependencies": {
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
+    "aws-jwt-verify": "^3.4.0",
+    "aws-sdk": "^2.1327.0",
+    "dotenv": "^16.0.3",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.2.0"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "29.2.4",
+    "@types/node": "18.11.18",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "29.3.1",
+    "prettier": "^2.3.2",
+    "source-map-support": "^0.5.20",
+    "supertest": "^6.1.3",
+    "ts-jest": "29.0.3",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "4.1.1",
+    "typescript": "^4.7.4"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
+  }
 }
