updating AWS SDK version for cognito, adding in parsing

--- a/example.env
+++ b/example.env
@@ -1,5 +1,10 @@
-AWS_ACCESS_KEY=XXXX
-AWS_SECRET_KEY=XXXX 
+AWS_ACCESS_KEY=xxxxx
+AWS_SECRET_KEY=xxxxxx
 AWS_USER_POOL_REGION=us-east-1 
-AWS_USER_POOL_ID=XXXX
+AWS_USER_POOL_ID=us-east-1_xxxxxxx
+AWS_ACCESS_KEY_ID=xxxxxxxx
+AWS_SECRET_ACCESS_KEY=xxxxxxxx
+ENV_TYPE=test
+MOCK_USER_SUB=xxxxxxx
+
  
