--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.294.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.321.1",
+    "@aws-sdk/client-dynamodb": "^3.321.1",
     "@aws-sdk/util-dynamodb": "^3.294.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
